--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Guru99_eCommerce_Application_Test_Automation_Test_Suite">
-                    <span>C:\Users\sarit\eclipse-workspace\eCommerceGuru99\testng.xml</span>
+                    <span>C:\Users\sarit\eclipse-workspace\eCommerceGuru99\src\main\resources\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,11 +103,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Guru99_eCommerce_Application_Test_Automation_Test_Suite" title="com.Guru99.qa.tests.HomePageTest" hash-for-method="homepageTitleTest">homepageTitleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Guru99_eCommerce_Application_Test_Automation_Test_Suite" title="com.Guru99.qa.tests.HomePageTest" hash-for-method="logoGuru99Test">logoGuru99Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -162,13 +157,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="logoGuru99Test">
-                  </a> <!-- logoGuru99Test -->
-                  <span class="method-name">logoGuru99Test</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="mobileLinkTest">
                   </a> <!-- mobileLinkTest -->
                   <span class="method-name">mobileLinkTest</span>
@@ -179,7 +167,7 @@
         </div> <!-- panel Guru99_eCommerce_Application_Test_Automation_Test_Suite -->
         <div panel-name="test-xml-Guru99_eCommerce_Application_Test_Automation_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarit\eclipse-workspace\eCommerceGuru99\testng.xml</span>
+            <span class="header-content">C:\Users\sarit\eclipse-workspace\eCommerceGuru99\src\main\resources\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -232,23 +220,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyIphoneAddToCartTest')
 data.setCell(0, 2, 'com.Guru99.qa.tests.MobilePageTest')
-data.setCell(0, 3, 4811);
+data.setCell(0, 3, 4349);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'mobileLinkTest')
 data.setCell(1, 2, 'com.Guru99.qa.tests.HomePageTest')
-data.setCell(1, 3, 706);
+data.setCell(1, 3, 771);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'logoGuru99Test')
+data.setCell(2, 1, 'homepageTitleTest')
 data.setCell(2, 2, 'com.Guru99.qa.tests.HomePageTest')
-data.setCell(2, 3, 72);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'homepageTitleTest')
-data.setCell(3, 2, 'com.Guru99.qa.tests.HomePageTest')
-data.setCell(3, 3, 18);
+data.setCell(2, 3, 18);
 window.suiteTableData['Guru99_eCommerce_Application_Test_Automation_Test_Suite']= { tableData: data, tableDiv: 'times-div-Guru99_eCommerce_Application_Test_Automation_Test_Suite'}
 return data;
 }
@@ -286,50 +270,38 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyIphoneAddToCartTest</span>
-                <span class="method-start">9794 ms</span>
+                <span class="method-start">8293 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14608 ms</span>
+                <span class="method-start">12643 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.Guru99.qa.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">15306 ms</span>
+                <span class="method-start">13333 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">homepageTitleTest</span>
-                <span class="method-start">20569 ms</span>
+                <span class="method-start">19246 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">20588 ms</span>
+                <span class="method-start">19265 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">21187 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">logoGuru99Test</span>
-                <span class="method-start">26636 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">26709 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">27349 ms</span>
+                <span class="method-start">19935 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">mobileLinkTest</span>
-                <span class="method-start">33512 ms</span>
+                <span class="method-start">25599 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">34219 ms</span>
+                <span class="method-start">26372 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
